style/biblo.css
/* =====================================
  Dynamo biblo style.css
  ------------------------------------
  library pages 
  ------------------------------------
  
  main library page (http://biblo.local/biblioteker)
    blogs 
    events at a library
/*--------------------------------------*/
.node-teaser .content{width:510px; margin:0 5px 0 0; float:left;}
.node-teaser .picture, .view-event-list .picture{ width:120px; height:120px; margin:0 20px 0 0; float:left; background:#eee;}


.panel-pane .node-teaser .content{width:540px; margin:0; float:left; padding:0; overflow:hidden;}
.panel-pane .node-teaser .picture{  width:120px; height:120px; margin:0 20px 0 0; float:left; background:#eee;}

body.page-biblioteker .panel-pane .node-teaser .content{margin:0; float:left; padding:0; overflow:hidden;}
body.page-biblioteker .panel-left .view ul li{padding:10px 0 10px 10px;}
body.page-biblioteker .panel-left .view ul.pager li{padding:0;}
body.page-biblioteker .node ul{margin:0;}

body.ding-blog .panel-pane .node-teaser .content{width:700px; margin:0; float:left; padding:0; overflow:hidden;}

body.ding-ting-object .panel-pane .node-teaser .content{width:370px; }
/* ==========================================================================
  library overview (http://biblo.local/biblioteker)
/*----------------------------------------------------------------------------*/
.ding-library-map {width:680px;}
.view-library-list .node-teaser-library{width:680px;}
.view-library-list .node-teaser-library .picture{width:120px; height:120px; margin:0 20px 0 0; float:left; background:#eee;}
.view-library-list .node-teaser-library .content{width:360px; margin:0 5px 0 0; float:left;}

  li.first .node-teaser-library{background: none; padding:10px 0}
    .node-teaser-library .content h3{padding:0 0 5px 0;}
    .node-teaser-library .content .link-card{padding:0 0 3px 0;}
    /*lib status*/
    .node-teaser-library .content .library-openstatus{padding:0 5px; color:#fff; width:40px;}
    .node-teaser-library .content .open{background:#71bf44; width:30px;}
    .node-teaser-library .content .closed{background:#6b0046;  width:44px}

  /*adresse*/
  .node-teaser-library .vcard div{clear:both;}
  .node-teaser-library .vcard  span.type{width:60px; display:block; float:left;}
  .node-teaser-library .vcard .geo{display:none;}

  /*opening hours*/
  .office-hours-week .hours {clear: right; float: right;}
  .node-teaser-library .office-hours-week{width:175px; float:left;}
    .node-teaser-library .office-hours-week .week-info{background:#d1d9d7}
    .node-teaser-library .office-hours-week .odd, .node-teaser-library .office-hours-week .even{padding:0 5px;} 
    .node-teaser-library .office-hours-week .day{width:70px; display:block; float:left; }
    .node-teaser-library .office-hours-week .week-info strong{margin:0 5px; font-weight:normal; }
    .node-teaser-library .office-hours-week .week-info{padding:0 0 0 5px; font-size:10px;}
    .node-teaser-library .office-hours-week .week-info a.prev{margin:0; font-weight:bold;}
    .node-teaser-library .office-hours-week .week-info a.prev{width:15px; height:20px;}
    .node-teaser-library .office-hours-week .week-info a.next{width:15px; height:20px;}
  /*opening hours lib page*/
  .pane-library_hours .office-hours-week .day{width:100px; display:block; float:left; }

/*calender pane*/
#event-list .panel-pane{margin:0 5px;}
  #event-list h3{background:#d1d9d7; padding:0px 10px;margin:0 0 0 10px; font-size:12px; text-transform: uppercase;  }

  #event-list .view-header{background:#d1d9d7; padding:3px 10px; margin:0 10px 0 14px;}
  #event-list li {padding:8px 0 6px 17px; background:transparent url(../images/bg-divider-verysmall.png) no-repeat left top;  clear:both;}
  #event-list li.first{background:none;}
  #event-list li .calendar-leafs .leaf{height:65px; width:55px; float:left; padding:2px 0 0 0; background:transparent url(../images/bg-calender.png) no-repeat 0 0; overflow:hidden;}
  #event-list li .calendar-leafs .leaf.today{background:transparent url(../images/bg-calender.png) no-repeat 0 -64px; ;}
  #event-list li .calendar-leafs .info{ width:150px; float:left; overflow:hidden; padding:0 0 0 4px}
  #event-list li .calendar-leafs  h4{padding:0 0 5px 0;}
  #event-list .title{color:#000; font-weight:bold;}
  #event-list li div.leaf{font-family: Georgia, serif; text-align: center;}
  #event-list li div.leaf .day{color:#fff; font-size:10px; line-height:15px;}
  #event-list li div.leaf .date{font-size:28px; line-height:26px; color:#000;}
  #event-list li div.leaf .month{font-size:9px; line-height:15px; text-transform: uppercase;}

  #event-list li div.info a{color:#666;}
  #event-list li div.info h4{line-height:8px; padding:0; margin:0;}
  #event-list li div.info h4 a{color:#050505; font-size:10px; line-height:12px;}
  #event-list li div.info span{font-size:9px;}
  #event-list li div.info span.time {background:transparent url(../images/ur.png) no-repeat 0 2px; padding:0 0 0 14px; font-weight:normal; font-size:10px;}
  #event-list .more-link{padding:0 30px 0 0;}


/*features pane*/
.ding-box-pane .pane-library_feature_list ul.item-list{padding:8px 0 8px 12px;} 
  .ding-box-pane .pane-library_feature_list ul.item-list li{width:95px; float:left; margin:0 ; padding:0 0 0 15px; background:transparent url(../images/ok.png) no-repeat left 3px; }

/*event*/
#content .node-event .content .field-datetime {}
#content .node-event .field-entry-price{font-weight:bold; display:inline;}
#content .node-event div.event-info span.time{background:transparent url(../images/ur.png) no-repeat 0 2px; padding:0 5px 0 14px; font-weight:normal;}

#event-similar h4 a{display:block; height:40px; overflow:hidden; font-size:11px; line-height:12px;}
#event-similar img{height:120px; width:120px; display:block;}
#event-similar div{height:100px; margin:0 0 20px 0; width:120px; overflow:hidden;  font-size:11px; line-height:12px;}
#event-similar .date{height:20px; font-weight:bold;}
/* ... */

